Addition and completion of previous commit, Added jquery and bootstrap through npm and gem files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "RubyProject1",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
+  }
 }
