Testing bug fix for production 2

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,6 +6,6 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV["REDISCLOUD_URL"]%>
+  url: redis://rediscloud:geImBAeIn5dQkyORwuK90j033AzunVp3@redis-11432.c8.us-east-1-4.ec2.cloud.redislabs.com:11432
   channel_prefix: RubyProject1_production
   # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
